Chat Service have been finished successfuly.
